<resources>
    <string name="app_name">Laboratorio7</string>
    <string name="laboratorio_7">Laboratorio 7</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nueva_cuenta">Nueva Cuenta</string>
    <string name="buenos_d_as">¡Buenos días!</string>
    <string name="actualizar_perfil">Actualizar Perfil</string>
    <string name="ingresa_tu_correo">Ingresa tu correo</string>
    <string name="nuevo_usuario_crea_tu_cuenta_aqu">¿Nuevo Usuario? ¡Crea tu cuenta aquí!</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="mi_Perfil">Mi Perfil</string>
    <string name="todo">TODO</string>
    <string name="hola">hola</string>
    <string name="hola_necesitamos_que_actualices_tu_perfil">Hola, necesitamos que actualices tu perfil</string>
    <string name="actualizar">Actualizar</string>
    <string name="hola_jcdurini_uvg_edu_gt_necesitamos_que_actualices_tu_perfil">Hola jcdurini@uvg.edu.gt, necesitamos que actualices tu perfil!</string>
    <string name="jcdurini_uvg_edu_gt">jcdurini@uvg.edu.gt</string>
</resources>