<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00E1F2F8"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/textViewLab7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/laboratorio_7"
        android:textColor="#0C0C0C"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EmailText_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailText_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="345dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/correo"
            android:layout_width="345dp"
            android:layout_height="43dp"
            android:autofillHints=""
            android:hint="@string/ingresa_tu_correo"
            android:inputType="textWebEmailAddress"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonIniciarSesion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#F66E43"
        android:text="@string/iniciar_sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNuevoUsuario"
        app:layout_constraintVertical_bias="0.061"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonNuevoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#00E1F2F8"
        android:text="@string/nuevo_usuario_crea_tu_cuenta_aqu"
        android:textColor="#4BDFF3"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailText_login"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>